fix: link highlight color in dark mode

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,6 +46,9 @@ body > header {
         height: 15px;
 
         path {
+          @media (prefers-color-scheme: dark) {
+            fill: invert($text-color);
+          }
           fill: $text-color;
         }
       }
